--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 
 main {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1.4fr;
   grid-gap: 10px;
 }
 
@@ -17,14 +17,20 @@ main {
   position: relative;
 }
 
+.comp-name {
+  margin-top: 15px;
+}
+
 .logo {
-  margin-right: 20px;
+  margin-right: 15px;
   margin-left: 20px;
   height: 52px;
   width: 50px;
   background-color: #ffff00;
+  display: inline-block;
   box-sizing: border-box;
-  padding: 17px;
+  text-align: center;
+  padding-top: 15px;
   border-radius: 50%;
   font-size: 20px;
   font-weight: 800;
@@ -37,4 +43,47 @@ main {
   background-color: #0a2ecd;
   color: white;
   height: 100vh;
+  border-top-left-radius: 7%;
+  border-top-right-radius: 20%;
+  border-bottom-right-radius: 45%;
+}
+
+.company-name {
+  position: relative;
+  top: 20%;
+  text-align: center;
+  font-size: 25px;
+}
+
+.app-write-up {
+  position: relative;
+  top: 25%;
+  margin: 15px;
+  text-align: center;
+  line-height: 1.5;
+  font-size: 1.18em;
+}
+
+.welcome-section {
+  position: relative;
+  top: 20%;
+  margin: 10px;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+}
+
+label {
+  display: block;
+  width: 100px;
+}
+
+input {
+  padding: 1rem;
+  width: 60%;
+  border-radius: 5px;
+  font-size: 15px;
+  outline: none;
 }
