--- a/styles/style.css
+++ b/styles/style.css
@@ -89,10 +89,6 @@ main {
   font-size: 1.18em;
 }
 
-#create-account-section {
-  display: none;
-}
-
 #welcome-section {
   position: relative;
   margin: auto;
@@ -105,6 +101,10 @@ main {
 .welcome {
   padding-bottom: 30px;
   text-align: center;
+}
+
+.create-page {
+  margin-left: 85px;
 }
 
 .form {
@@ -189,7 +189,7 @@ input:focus::-ms-input-placeholder {
   color: transparent;
 }
 
-#username {
+form > input[type='text'] {
   border-bottom: solid 1px #f46f04;
 }
 
@@ -202,6 +202,7 @@ input[type='submit'] {
   width: 35%;
   cursor: pointer;
   color: #fefeff;
+  border-radius: 30px;
 }
 
 input[type='button'] {
@@ -387,4 +388,91 @@ input[type='submit']:hover {
     top: 200px;
     right: 0px;
   }
+}
+
+/* Create accout page styles */
+
+.users {
+  display: grid;
+  grid-template-columns: 0.8fr 1.9fr;
+  grid-gap: 10px;
+}
+
+.ball {
+  margin-left: 25px;
+  height: 53px;
+  width: 50px;
+  background-color: #f46f04;
+  display: inline-block;
+  box-sizing: border-box;
+  padding-top: 15px;
+  border-radius: 50%;
+  position: relative;
+  left: -19px;
+}
+
+.user-id {
+  position: absolute;
+  top: 100px;
+  left: 147px;
+  justify-content: center;
+}
+
+.user-profile {
+  position: relative;
+  justify-content: center;
+  background-color: #0a2ecd;
+  color: white;
+  height: 100vh;
+  border-top-right-radius: 20%;
+  border-bottom-right-radius: 20%;
+}
+
+li {
+  list-style: none;
+}
+
+.tasks {
+  position: relative;
+  top: 250px;
+  font-size: 1.3em;
+  box-sizing: border-box;
+}
+
+.tasks ul li i {
+  padding-right: 20px;
+}
+
+.tasks ul li {
+  padding: 15px;
+  transition: 0.3s;
+  cursor: pointer;
+}
+
+.tasks ul li:hover {
+  background-color: #f46f04;
+}
+
+table {
+  width: 100%;
+  margin: 10px;
+  box-sizing: border-box;
+  border-collapse: collapse;
+  color: #0a2ecd;
+}
+
+table tr th {
+  color: #f46f04;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+
+table tr td {
+  text-align: center;
+  padding: 14px;
+}
+
+table tr:nth-child(even) {
+  background-color: #0a2ecd;
+  color: #fefeff;
 }
